--- a/main.css
+++ b/main.css
@@ -21,7 +21,7 @@ body {
 }
 
 table, td {
-    border: 1px solid rgb(200,200,200);
+    border: 1px solid rgb(150,150,150);
     border-collapse: collapse;
     width: 100%;
 }
@@ -30,6 +30,7 @@ td {
   width: 100px;
   height: 15px;
   padding: 5px;
+  box-sizing: border-box;
 }
 
 table {
@@ -37,7 +38,3 @@ table {
 }
 
 
-
-td:focus{
-  background-color: rgb(150,200,150);
-}
