--- a/main.css
+++ b/main.css
@@ -20,6 +20,19 @@ body {
   width: 100%;
 }
 
+tr:first-child td{
+  background-color: rgb(150,200,150);
+  border:1px solid black;
+  text-align: center;
+}
+
+td:first-child {
+  background-color: rgb(150,200,150);
+  border:1px solid black;
+  width: 50px;
+  text-align: center;
+}
+
 table, td {
     border: 1px solid rgb(150,150,150);
     border-collapse: collapse;
