--- a/main.css
+++ b/main.css
@@ -24,6 +24,7 @@ tr:first-child td{
   background-color: rgb(150,200,150);
   border:1px solid black;
   text-align: center;
+  box-sizing: border-box;
 }
 
 td:first-child {
@@ -31,6 +32,7 @@ td:first-child {
   border:1px solid black;
   width: 50px;
   text-align: center;
+  box-sizing: border-box;
 }
 
 table, td {
@@ -50,4 +52,10 @@ table {
   margin-top:30px;
 }
 
+td:hover{
+  background-color: rgb(240,240,240);
+}
 
+tr:first-child td:hover{
+  background-color: rgb(240,240,240);
+}
