--- a/main.css
+++ b/main.css
@@ -16,7 +16,29 @@ body {
   z-index: 20;
 }
 
-.tableDiv {
+.footer {
+  left: 0px;
+  position: fixed;
+  bottom:0;
+  width: 100%;
+  height: 30px;
+  background-color: rgb(200,200,200);
+  z-index: 20;
+  padding:0;
+  border-top:1px solid black;
+}
+
+details {
+  width: 100px;
+  margin-left: 10px;
+  background-color: rgb(200,200,200);
+}
+
+details summary::-webkit-details-marker {
+  display: none;
+}
+
+#tableDiv {
   width: 100%;
 }
 
@@ -43,9 +65,16 @@ table, td {
 
 td {
   width: 100px;
-  height: 15px;
-  padding: 5px;
+  height: 25px;
+  padding: 0px;
   box-sizing: border-box;
+}
+
+td input{
+  width: 100%;
+  height: 100%;
+  padding: 0px;
+  border: none;
 }
 
 table {
@@ -59,3 +88,32 @@ td:hover{
 tr:first-child td:hover{
   background-color: rgb(240,240,240);
 }
+
+
+.tabs {
+  margin-left:45%;
+}
+
+.tab {
+  float: left;
+  margin-top: 1px;
+}
+.tab label {
+  background: #eee;
+  padding: 2px;
+  border: 1px solid black;
+  margin-left: -1px;
+  position: relative;
+  left: 1px;
+  border-radius:0px 0px 10px 10px;
+}
+.tab [type=radio] {
+  display: none;
+}
+
+[type=radio]:checked ~ label {
+  background: white;
+  border-top: 1px solid white;
+  z-index: 2;
+}
+
