--- a/main.css
+++ b/main.css
@@ -106,6 +106,8 @@ tr:first-child td:hover{
   position: relative;
   left: 1px;
   border-radius:0px 0px 10px 10px;
+  padding-left: 10px;
+  padding-right: 10px;
 }
 .tab [type=radio] {
   display: none;
