Background color for selected input, last input removing and text handling

--- a/main.css
+++ b/main.css
@@ -73,8 +73,11 @@ td {
 td input{
   width: 100%;
   height: 100%;
-  padding: 0px;
   border: none;
+}
+
+td input:focus{
+  background-color: rgb(245,255,245);
 }
 
 table {
