Css nth-child zebra-rows

--- a/main.css
+++ b/main.css
@@ -42,6 +42,12 @@ details summary::-webkit-details-marker {
   width: 100%;
 }
 
+tr:nth-child(2n+1){
+  background-color: rgb(240,240,255);
+  text-align: center;
+  box-sizing: border-box;
+}
+
 tr:first-child td{
   background-color: rgb(150,200,150);
   border:1px solid black;
@@ -49,7 +55,7 @@ tr:first-child td{
   box-sizing: border-box;
 }
 
-td:first-child {
+tr td:first-child {
   background-color: rgb(150,200,150);
   border:1px solid black;
   width: 50px;
