--- a/css/main.css
+++ b/css/main.css
@@ -1,12 +1,63 @@
 @import url(https://fonts.googleapis.com/css?family=Ubuntu:300);
 
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure,
+footer, header, hgroup, menu, nav, section {
+  display: block;
+}
+body {
+  line-height: 1;
+}
+ol, ul {
+  list-style: none;
+}
+blockquote, q {
+  quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+  content: '';
+  content: none;
+}
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+
+
+
+
+
+
+
+
 * {
   box-sizing: border-box;
 }
 
 body {
   font-family: 'Ubuntu', sans-serif;
-  display: inline-block;
+  display: block;
 
 }
 
@@ -32,69 +83,72 @@ body {
   border-top:1px solid black;
 }
 
-details {
-  width: 100px;
-  margin-left: 10px;
-  background-color: rgb(200,200,200);
-  display: inline-block;
-}
-
-details summary::-webkit-details-marker {
-  display: none;
-}
 
 #tableDiv {
-  display: inline-block;
-  margin-top: 47px;
-  margin-left: 40px;
+  display: block;
+  margin-top: 54px;
+  margin-left: 29px;
+}
+
+table {
+  border: 1px solid rgb(150,150,150);
+  border-collapse: collapse;
 }
 
 tr:nth-child(2n+1){
   background-color: rgb(240,240,255);
   text-align: center;
-  box-sizing: border-box;
 }
 
 tr:first-child{
   position: fixed;
-  left: 50px;
+  display: flex;
+  left: 30px;
   top:30px;
+  z-index: 30;
 }
-
-
 
 tr:first-child td{
   background-color: rgb(150,200,150);
-  border:1px solid black;
+  border-top: 1px solid;
+  border-bottom:1px solid black;
   text-align: center;
-  box-sizing: border-box;
+  min-width: 100px;
+  justify-content: center;
+}
+
+tr:first-child td:first-child{
+  min-width: 30px;
+  width: 30px;
+  left: 0px;
+  top:30px;
 }
 
 td:first-child{
   position: fixed;
   width: 30px;
   left:0px;
-}
-
-tr td:first-child {
   background-color: rgb(150,200,150);
   border:1px solid black;
-  min-width: 50px;
   text-align: center;
+  justify-content: center;
 }
 
-table, td {
-    border: 1px solid rgb(150,150,150);
-    border-collapse: collapse;
-    width: 100%;
+tr {
+  display: flex;
+  align-items: center;
+  width: 100%;
 }
 
 td {
-  min-width: 100px;
+  border-bottom:1px solid black;
+  border-right:1px solid black;
   height: 25px;
+  width: 100px;
   padding: 0px;
-  box-sizing: border-box;
-  text-align: right;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
 }
 
 td input{
@@ -121,12 +175,12 @@ tr td:first-child:hover {
 }
 
 .tabs {
-  margin-left:5%;
+  margin-left:3%;
 }
 
 .tab {
   float: left;
-  margin-top: 1px;
+  margin-top: 3px;
 }
 .tab label {
   background: #eee;
@@ -149,15 +203,15 @@ tr td:first-child:hover {
   z-index: 2;
 }
 
-td[active = true] {
+td[data-active] {
   background-color: rgb(230,230,230);
   border: 2px solid rgb(100,150,200);
 }
 
-td[active-col = true] {
+td[data-active-col] {
   background-color: rgb(200,200,200);
 }
 
-tr[active = true] {
+tr[data-active] {
   background-color: rgb(200,200,200);
 }
