--- a/css/main.css
+++ b/css/main.css
@@ -148,20 +148,30 @@ td {
   height: 25px;
   width: 100px;
   padding: 0px;
-  display: flex;
-  align-items: center;
-  justify-content: flex-end;
+  display: table-cell;
+  text-align: right;
+  line-height: 25px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
+
 td input{
+  display: block;
+  border-width:0px;
+  outline: none;
+  border:none;
   width: 100%;
   height: 100%;
-  border: none;
 }
 
 td input:focus{
   background-color: rgb(245,255,245);
+  border-width:0px;
   outline: none;
+  border:none;
 }
 
 
